- Change user endpoint to api/user - Add CSRF controller - Make necessary refactors to move from DO Spaces to Cloudflare R2